--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/BryanDonovan/node-cache-manager.git"
+    "url": "https://github.com/studiohyperdrive/node-cache-manager.git"
   },
   "keywords": [
     "cache",
@@ -22,7 +22,7 @@
     "memory cache",
     "multiple cache"
   ],
-  "author": "Bryan Donovan",
+  "author": "SHD Developer",
   "license": "MIT",
   "dependencies": {
     "async": "3.2.0",
